--- a/app/static/css/lang.css
+++ b/app/static/css/lang.css
@@ -2,9 +2,10 @@
 .lang-selector {
     position: relative;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 10px;
     cursor: pointer;
     user-select: none;
+    font-size: 12px; 
 }
 
 /* Botón visible (la bandera seleccionada) */
@@ -26,8 +27,8 @@
 
 /* Imagen principal */
 .lang-selector .lang-selected img {
-    width: 22px;
-    height: 22px;
+    width: 18px;
+    height: 18px;
     border-radius: 4px;
 }
 
@@ -66,8 +67,9 @@
 }
 
 .lang-option img {
-    width: 22px;
-    height: 22px;
+    width: 18px;
+    height: 18px;
+    object-fit: cover;
     border-radius: 4px;
 }
 
